# layerclaw

./: .gitignore  .pre-commit-config.yaml  BRANDING.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  REBRANDING_SUMMARY.md  pyproject.toml  setup.py  tracer.md
.github/workflows/: ci.yml  publish.yml
docs/: api.md  quickstart.md
examples/: README.md  basic_pytorch.py  custom_training_loop.py
tests/: __init__.py  conftest.py  test_config.py  test_hooks.py  test_integration.py  test_storage.py
tracer/: __init__.py  config.py  state.py
tracer/analysis/: __init__.py  anomaly_detection.py  query.py
tracer/cli/: __init__.py  main.py
tracer/core/: __init__.py  hooks.py  system_metrics.py  tracer.py
tracer/integrations/: __init__.py  lightning.py  transformers.py
tracer/storage/: __init__.py  backend.py  schema.py
